<?xml version="1.0"?>
<package format="2">

  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>The my_robot_description package</description>
  <maintainer email="lxtrungg@gmail.com">lxtrungg</maintainer>
  <license>BSD</license>
  <author email="lxtrungg@gmail.com">Le Xuan Trung</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
