<?xml version="1.0"?>
<package format="2">
  <name>my_robot_navigation</name>
  <version>0.0.0</version>
  <description>The my_robot_navigation package</description>
  <maintainer email="lxtrungg@gmail.com">lxtrungg</maintainer>
  <license>TODO</license>
  <author email="lxtrungg@gmail.com">Le Xuan Trung</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
